--- a/src/OclMemBench.dproj
+++ b/src/OclMemBench.dproj
@@ -94,10 +94,10 @@
         <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win32)'!=''">
-        <Debugger_RunParams>2 1 256 20</Debugger_RunParams>
+        <Debugger_RunParams>p 2 d 1 a f</Debugger_RunParams>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win64)'!=''">
-        <Debugger_RunParams>2 1 100 10 stop</Debugger_RunParams>
+        <Debugger_RunParams>p 2 d 1 a stop</Debugger_RunParams>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -109,6 +109,7 @@
         <DCCReference Include="Libs\OpenCL\CL_platform.pas"/>
         <DCCReference Include="Libs\OpenCL\CL.pas"/>
         <DCCReference Include="Libs\OpenCL\DelphiCL.pas"/>
+        <DCCReference Include="TxtConfig.pas"/>
         <None Include="membench.cl"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
